# dot

./: README.md  fish.sh  install.sh  software.txt  update.sh
alacritty/: alacritty.toml
all/alacritty/: alacritty.toml
all/fish/: config.fish
all/fish/cmds/: git.fish  gnu.fish  term.fish
all/fish/cmds/cpp/cmake/: CMakeLists.txt
all/ghostty/: bettercrt.glsl  config  glitchy.glsl  tft.glsl
all/hypr/: hyprland.conf
all/nvim/: init.lua
arm/alacritty/: alacritty.toml
arm/hypr/: hyprland.conf
arm/sh/: software.sh  software.txt
arm/shell/: software.sh  update.sh
bash/: install.sh  update.sh
fish/: config.fish
fish/cmds/: cpp.fish  git.fish  gnu.fish  term.fish
fish/cmds/cpp/: cmake.fish  meson.fish  xmake.fish
hypr/: hyprland.conf
kitty/: kitty.conf
lin/: install.sh  software.sh  software.txt
lin/alacritty/: alacritty.toml
lin/arm64/: install.sh  software.sh
lin/fish/: config.fish
lin/fish/cmds/: git.fish  nvim.fish  prgs.fish  term.fish  utils.fish
lin/hypr/: hyprland.conf
lin/nvim/: init.lua
lin/rio/: config.toml
lin/x86_64/: install.sh  software.sh
lin/x86_64/fish/: config.fish
lin/x86_64/hypr/: hyprland.conf
nvim/: init.lua
osx/: install.sh  software.sh
osx/arm64/: install.sh  software.sh  software.txt
osx/sh/: software.sh  software.txt
qb/: config.py
scripts/: arm.sh  fish.sh  lin.sh  osx.sh
shell/: install.sh  software.sh
shell/arm/: software.sh  software.txt
shell/x86/: software.sh
x86/sh/: software.sh  software.txt
x86/shell/: software.sh  software.txt  update.sh
zed/: keymap.json
(+85 files in other folders)
